Implement suggestions